--- a/src/style/scss/project.scss
+++ b/src/style/scss/project.scss
@@ -25,7 +25,7 @@
 		&.labhd {
 			font-size: 20px;
 			margin: 2em 0 5px 0;
-			float: left;
+			// float: left;
 			width: 80%;
 		}
 	}
@@ -156,6 +156,12 @@
 
 .main {
     padding: 1em;
+    padding-bottom: 200px;
+}
+
+.page-header-info-wrap {
+    float: left;
+    width: 90%;
 }
 
 h1.container {
